2002-12-27  Martin Mares  <mj@ucw.cz>

	* lib/nbsd-libpci.c: Cleaned up and hopefully made it endian safe.

	* lib/generic.c (pci_generic_scan_bus): Added work-around for devices with
	discontiguous numbering of functions. This is already present in the Linux
	kernel for several years, but I forgot to update pciutils as well.

2002-12-26  Martin Mares  <mj@ucw.cz>

	* lib/header.h, lspci.c: Dump AGP3 flags and speeds.

	* lib/pci.h, Makefile: Removed HAVE_OWN_HEADER_H. Always use our own header,
	there is no reason to prefer the kernel version.

	* lib/proc.c (proc_scan): Don't forget to initialize hdrtype.

	* Added preliminary version of NetBSD support by Quentin Garnier
	<netbsd@quatriemek.com>.

2002-04-06  Martin Mares  <mj@ucw.cz>

	* lspci.c: Mention "-xxx" in the help.

2002-03-30  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.10.

	* Removed pci.ids from the CVS as they are now maintained separately.
	They are still included in the tarball, but if you are building	pciutils
	from CVS sources or you want to get a newer ID file than the one distributed,
	just use "make update-ids" to download the most recent snapshot from
	pciids.sf.net.

	* Makefile, README: Updated accordingly.

	* Makefile: Added a couple of maintenance targets.

	* maint/*: Maintainer's utilities now reside here (present only in CVS,
	not in the tarball).

	* lib/names.c (parse_name_list): End-of-line comments are no longer
	supported. Hashes are now perfectly valid in all names and they start
	a comment only at the start of the line.

2002-03-26  Martin Mares  <mj@ucw.cz>

	* README: Rewritten.

	* Makefile: When the currently installed pci.ids file is newer than
	the version to be installed, don't overwrite it. Suggested by
	Jean Delvare <khali@linux-fr.org>.

2002-03-24  Martin Mares  <mj@ucw.cz>

	* lspci.c (show_pcix_bridge): Added PCI-X capability display.
	Contributed by Jeff Garzik <jgarzik@mandrakesoft.com>.

	* lib/header.h: Added PCI-X stuff. Again by Jeff.
